--- a/sites/all/themes/ec_default/css/hack.less
+++ b/sites/all/themes/ec_default/css/hack.less
@@ -244,3 +244,9 @@ blockquote {
     &:focus { color: #def !important; };
   }  
 }
+
+/* ---------------- Gallery  ----------------- */
+.thumbnails {
+  padding: 0;
+  margin: 0;
+}
