--- a/sites/all/themes/ec_default/css/hack.less
+++ b/sites/all/themes/ec_default/css/hack.less
@@ -3,7 +3,10 @@
   background-image: url("../images/title/title_en.gif");
 }
 .title {
-  background-image: url("../images/title/title.gif");
+  /*background-image: url("../images/title/title.gif");*/
+}
+.layout { 
+  background: transparent; 
 }
 .layout-body {
   margin-top: 0;
