--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -573,7 +573,7 @@ div.password-confirm {
 
 fieldset {
   border: 1px solid #cccccc;
-  padding: 10px;
+  padding: 10px 13px;
   margin: 10px 0;
   .box-shadow(0 1px 5px rgba(0, 0, 0, 0.08) inset);
   .border-radius;
