--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1,11 +1,11 @@
 /* $Id: style.css,v 1.53 2011/01/04 06:23:29 dries Exp $ */
 
-.f_right {
-  float: right;
-}
-.clickable {
-  cursor: pointer;
-}
+.f_right { float: right; }
+.f_left { float: left; }
+.c_right { clear: right; }
+.c_left { clear: left; }
+.t_upper { text-transform: uppercase; }
+.clickable { cursor: pointer; }
 
 /* ---------- Overall Specifications ---------- */
 
@@ -1169,4 +1169,15 @@ div.workbench-info-block {
     width: 55px;
     text-align: center;
   }
+}
+
+/* ---------------- Ideas  ----------------- */
+.node-idea form.fivestar-widget div.description {
+  display: inline-block;
+  vertical-align: super;
+  color: #999;
+}
+.node-idea form.fivestar-widget div.fivestar-widget {
+  display: inline-block;
+  margin-right: 5px;
 }
