-MULTISITE-100 Switch back to jquery 1.4

--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1181,3 +1181,15 @@ div.workbench-info-block {
   display: inline-block;
   margin-right: 5px;
 }
+
+/* ---------------- Media galleries  ----------------- */
+.node-media-gallery > .content {
+  position: relative;
+}
+.meta-wrapper.hover {
+  display: none !important;
+  top: 200px;
+}
+#gallery_info h3 {
+  text-align: center;
+}
