-MULTISITE-100 -MULTISITE-322 -MULTISITE-312

--- a/sites/all/themes/ec_default/css/ec_default.less
+++ b/sites/all/themes/ec_default/css/ec_default.less
@@ -12,5 +12,4 @@
 //import page styles
 @import "colors.less"; // text and tags colors
 @import "style.less"; // tags look and feel
-@import "hack.less"; // hack for Ec and bootstrap styles
-
+@import "hack-bootstrap.less"; // hack bootstrap styles
