--- a/sites/all/themes/ec_default/css/hack-ec.less
+++ b/sites/all/themes/ec_default/css/hack-ec.less
@@ -23,3 +23,8 @@
   margin-right: -5px;
   margin-top: 2px;
 }
+#path li {
+  line-height: 1.6;
+  color: #fff;
+}
+.layout-footer { color: @link_color; }
