--- a/sites/all/themes/ec_default/css/hack-europa.less
+++ b/sites/all/themes/ec_default/css/hack-europa.less
@@ -2,3 +2,10 @@
 .banner-right {
   background-image: url("../wel/template-2011/images/header-background.png");
 }
+#path li {
+  line-height: 1.6;
+}
+.layout-footer { 
+  font-size: 0.9em; 
+  padding-left: 10px;
+}
