--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1062,11 +1062,10 @@ a.btn {
     }
   }
   .content {
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     h3 {
       font-size: 1.2em;
       color: #027AC6;
-      
+      line-height: 1.3em;
       &:hover {
         color: #003366;
       }
