--- a/sites/all/themes/ec_default/css/ie.less
+++ b/sites/all/themes/ec_default/css/ie.less
@@ -69,3 +69,7 @@ fieldset legend {
 .navbar .navbar-inner {
   border: solid 1px #eee;
 }
+.mg-col .node-media-gallery.node-teaser {
+  display: inline;
+  zoom: 1;
+}
