--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1216,5 +1216,55 @@ div.workbench-info-block {
     }
   }
 }
+.mg-col .node-media-gallery.node-teaser {
+  float: none;
+  display: inline-block;
+  vertical-align: top;
+}
+.mg-col-4 > .field-items > .field-item, .mg-col-4 .node {
+  width: 24.65% !important;
+}
 
+/* ---------------- Carrousel  ----------------- */
+div.carrousel {
+  width: 50%;
+  margin: 200px auto 50px;
+  padding: 0;
+  > ul {
+    padding: 0;
+    margin: 0;
+    li.roundabout-moveable-item {
+      width: 400px;
+      height: auto;
+      list-style: none;
+      cursor: pointer;
+      div.item {
+        background-color: #fff;
+        .border-radius;
+        .box-shadow;
+        border: #ddd 1px solid;
+        padding: 8px;
+        text-align: center;
+        img {
+          .border-radius;
+        }
+        .content {
+          margin-top: 0;
+        }
+      }
+    }
+  }
+  p.wrapper {
+    padding: 0;
+    margin: 0;
+    min-height: 150px;
+  }
+}
+p.carrousel_buttons {
+  padding-top: 30px;
+  text-align: center;
+  i {
+    padding: 0;
+  }
+}
 
