-MULTISITE-290 use bootstrap carousel

--- a/sites/all/themes/ec_default/css/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/hack-bootstrap.less
@@ -223,3 +223,37 @@ blockquote {
   padding: 0;
   margin: 0;
 }
+
+/* ---------------- Carousel  ----------------- */
+.carousel {
+  width: 450px;
+  margin-left:auto;
+  margin-right: auto;
+  background-color: #fff;
+  .border-radius;
+  .box-shadow;
+  border: #ddd 1px solid;
+  padding: 8px;
+  text-align: center;  
+  a {
+    color: #fff !important;
+    text-decoration: none;
+  }
+  img {
+    .box-shadow(0 1px 5px rgba(0, 0, 0, 0.08) inset);
+  }
+  .content {
+    margin-top: 0;
+  }
+}
+.carousel-caption {
+  padding-top: 5px;
+  color: #fff;
+  h4 {
+    color: #fff;
+    font-weight: bold;
+  }
+}
+.carousel-control {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
