-MULTISITE-315 add several region

--- a/sites/all/themes/ec_default/css/layout.css
+++ b/sites/all/themes/ec_default/css/layout.css
@@ -126,6 +126,12 @@ body,
   text-align: right;
 }
 
+/* ---------------- Region tools bottom ----------------- */
+.region-tools-bottom {
+  display: block;
+  text-align: right;
+}
+
 /* ---------------- User menu  ----------------- */
 #block-system-user-menu {
   margin-bottom: 5px;
