--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -428,9 +428,14 @@ ul.links {
 .layout-left input[type=password] {
   width: 158px;
 }
-.layout-left .item-list ul li {
+.layout-left .item-list ul li,
+.layout-right .item-list ul li  {
   margin: 0;
   padding: 0;
+}
+.layout-left h2,
+.layout-right h2 {
+
 }
 
 /* ----------------- Triptych ----------------- */
