-MULTISITE-110 theme dropdown

--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -177,6 +177,20 @@ a.context-block-region {
     text-decoration: none;
     font-size: 110%;
   }
+  li {
+    &.expanded {
+      list-style: none;
+      padding: 0;   
+    }
+    &.collapsed {
+      list-style: none;
+      padding: 0;       
+    }
+    &.leaf {
+      list-style: none;
+      padding: 0;       
+    }    
+  }
 }
 
 /* --------------- Secondary Menu ------------ */
