-MULTISITE-100 update display of sidebar blocks force display of latest IE version available

--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -763,11 +763,14 @@ div.vertical-tabs .vertical-tabs-panes fieldset.vertical-tabs-pane {
 
 /* --------------- Search Form ---------------- */
 
-#block-search-form {
+#search-block-form {
   padding-bottom: 5px;
-}
-#block-search-form .content {
-  margin-top: 0;
+  .content {
+    margin-top: 0;
+  }
+  .form-actions {
+    padding: 0;
+  }
 }
 #search-form input#edit-keys,
 #block-search-form .form-item-search-block-form input {
