-MULTISITE-100 hide unwanted menu items for media galleries

--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1246,3 +1246,7 @@ div.workbench-info-block {
 .mg-col-4 > .field-items > .field-item, .mg-col-4 .node {
   width: 24.65% !important;
 }
+.node-media-gallery {
+  li.file-edit { display: none; }
+  li.file-delete { display: none; }
+}
