-MULTISITE-100 hide unwanted menu items for media galleries

--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1247,6 +1247,6 @@ div.workbench-info-block {
   width: 24.65% !important;
 }
 .node-media-gallery {
-  li.file-edit { display: none; }
-  li.file-delete { display: none; }
+  li.media-gallery-edit { display: none; }
+  li.media-gallery-remove { display: none; }
 }
