Suppress drag and drop function.-MULTISITE-360 PATCh NOT NEEDED ANYMORE

--- a/sites/all/modules/modified/media_gallery/media_gallery.css
+++ b/sites/all/modules/modified/media_gallery/media_gallery.css
@@ -598,12 +598,14 @@ a.media-gallery-thumb img,
 
 /* @group Overrides */
 
-a.contextual-links-trigger {
+ a.contextual-links-trigger {
+  display: none !important;
   background-position: 2px -18px;
 }
 
 a.contextual-links-trigger:hover,
 div.contextual-links-active a.contextual-links-trigger {
+  display: none !important;
   background-position: 2px 0;
 }
 
