--- a/sites/all/themes/ec_default/css/layout.css
+++ b/sites/all/themes/ec_default/css/layout.css
@@ -121,15 +121,44 @@ body,
 /* ---------------- Region tools  ----------------- */
 .region-tools {
   float: right;
-  width: 200px;
+  position: relative;
+  top: -30px;
   display: block;
   text-align: right;
+}
+.region-tools .block {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+.region-tools .block ul {
+  margin: 0;
+  padding: 0;
+}
+.region-tools .block ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* ---------------- Region tools bottom ----------------- */
 .region-tools-bottom {
   display: block;
   text-align: right;
+}
+.region-tools-bottom .block {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+.region-tools-bottom .block ul {
+  margin: 0;
+  padding: 0;
+}
+.region-tools-bottom .block ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* ---------------- User menu  ----------------- */
