-MULTISITE-100 fix display problem for tools-bottom region

--- a/sites/all/themes/ec_default/css/layout.css
+++ b/sites/all/themes/ec_default/css/layout.css
@@ -145,6 +145,7 @@ body,
 .region-tools-bottom {
   display: block;
   text-align: right;
+  clear: both;
 }
 .region-tools-bottom .block {
   display: inline-block;
