-MULTISITE-100 fix display problem for print/pdf buttons

--- a/sites/all/themes/ec_default/css/layout.css
+++ b/sites/all/themes/ec_default/css/layout.css
@@ -187,3 +187,8 @@ body,
 .layout-content .well .content {
   margin-top: 0;
 }
+
+/* ---------------- print/pdf  ----------------- */
+#block-print-print-links span {
+  display: inline-block;
+}
