--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1258,12 +1258,16 @@ div.workbench-info-block {
   #gradient .radial(#7AD, #369);
   //#gradient .vertical-three-colors(#f1f9fe, #58B, 60%, #369);
   //#gradient .directional(#369, #f1f9fe, 30deg);
-  //#gradient .striped(#369);
-  .container-fluid {
-    margin-top: 50px;
+  //#gradient .striped(#369);  
+  height: 100%;
+  > div.row-fluid {
+    padding-top: 50px;
     h1 {
       color: #F5F5F5;
-      text-shadow: 1px 1px rgba(0, 0, 0, 0.3);
+      text-shadow: -1px 0 0 rgba(0, 0, 0, 0.15), 
+             1px 0 0 rgba(0, 0, 0, 0.15),
+             0 -1px 0 rgba(0, 0, 0, 0.15),
+             0 1px 0 rgba(0, 0, 0, 0.15);
     }
     h2#label_language {
       margin-top: 0;
