-MULTISITE-100 improve splash screen (display picture as a background)

--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1294,3 +1294,8 @@ div.workbench-info-block {
     }
   }
 }
+#logo {
+  width: 100%;
+  height: 113px;
+  background: url('../images/eu-flag.gif') no-repeat top center;
+}
