--- a/sites/all/themes/ec_default/css/less/ec_default.less
+++ b/sites/all/themes/ec_default/css/less/ec_default.less
@@ -25,6 +25,7 @@
 @import "feature-set.less"; // feature set
 @import "feature-ideas.less"; // feature ideas
 @import "feature-media-galleries.less"; // feature media galleries
+@import "feature-fat-footer.less"; // feature fat footer
 @import "splash.less"; // language splash screen
 
 @import "hack-bootstrap.less"; // hack bootstrap styles
