MULTISITE-406 theme fat footer

--- a/sites/all/themes/ec_default/css/less/feature-fat-footer.less
+++ b/sites/all/themes/ec_default/css/less/feature-fat-footer.less
@@ -1,15 +1,21 @@
 /* ----------------- Fat footer ----------------- */
 .block-fat-footer {
   margin: 8px 0;
+  text-align: left;
   a {
     text-decoration: none;
   }
+  h2 {
+    display: none;
+  }
   div.fat_footer_item {
     display: inline-block;
+    width: 12%;
     vertical-align: top;
     text-align: left;
     line-height: 23px;
     padding: 0 8px;
+    margin-bottom: 8px;
     ul {
       padding: 0 0 0 10px;
       margin: 0;
