--- a/sites/all/themes/ec_default/css/less/ec_default.less
+++ b/sites/all/themes/ec_default/css/less/ec_default.less
@@ -26,6 +26,6 @@
 @import "feature-ideas.less"; // feature ideas
 @import "feature-media-galleries.less"; // feature media galleries
 @import "feature-fat-footer.less"; // feature fat footer
-@import "splash.less"; // language splash screen
+@import "feature-splash.less"; // feature splash screen
 
 @import "hack-bootstrap.less"; // hack bootstrap styles
