--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -102,7 +102,7 @@ blockquote {
     background-color: transparent;     
     &:hover { 
       color: #fff; 
-      background: #0085D5;
+      #gradient .vertical(#0085D5, #0075c5);
       .border-radius;
     }
     &.active { 
@@ -116,8 +116,8 @@ blockquote {
   .nav > li:last-child > a { border-right: none; }  
   .nav > li.open > a {
     &:hover { 
-      color: #fff; 
-      background: #0085D5;
+      color: #fff;
+      #gradient .vertical(#0085D5, #0075c5);
     }  
   }    
 }    
