--- a/sites/all/themes/ec_default/css/less/style.less
+++ b/sites/all/themes/ec_default/css/less/style.less
@@ -573,17 +573,15 @@ div.admin-panel .description {
   margin-top: 15px;
   padding: 15px;
   color: #fff;
-  text-shadow: -1px 0 0 rgba(0, 0, 0, 0.15), 
-         1px 0 0 rgba(0, 0, 0, 0.15),
-         0 -1px 0 rgba(0, 0, 0, 0.15),
-         0 1px 0 rgba(0, 0, 0, 0.15);  
-  /*text-shadow: -1px 0 0 rgba(255, 255, 255, 0.3), 
-         1px 0 0 rgba(255, 255, 255, 0.3),
-         0 -1px 0 rgba(255, 255, 255, 0.3),
-         0 1px 0 rgba(255, 255, 255, 0.3);   */         
+  .box-shadow(0 1px 100px rgba(51, 102, 153, 0.8) inset);
+  background-color: #7ad;
+  text-shadow: -1px 0 0 rgba(0, 0, 0, 0.1), 
+         1px 0 0 rgba(0, 0, 0, 0.1),
+         0 -1px 0 rgba(0, 0, 0, 0.1),
+         0 1px 0 rgba(0, 0, 0, 0.1);
   //#gradient .horizontal(#369, #f1f9fe);
-  #gradient .vertical(#074A8B, #369);
-  //#gradient .radial(#7AD, #369);
+  #gradient .vertical(#7AD, #369);
+  #gradient .radial(#69c, #369);
   //#gradient .vertical-three-colors(#369, #58B, 60%, #f1f9fe);
   //#gradient .directional(#369, #f1f9fe, 30deg);
   //#gradient .striped(#369); 
@@ -591,8 +589,5 @@ div.admin-panel .description {
   a:link,
   a:visited {
     color: #fff;
-  }
-  a:hover {
-    color: #f1f9fe;
   }
 }
