--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -64,6 +64,9 @@ blockquote {
 
 /* ---------------- Nav list  ----------------- */
 .nav-list {
+  li {
+    list-style: none !important;
+  }
   .nav-header {
     margin-top:18px;
   }
