MULTISITE-312 Theme add media form

--- a/sites/all/themes/ec_default/css/less/style.less
+++ b/sites/all/themes/ec_default/css/less/style.less
@@ -442,6 +442,14 @@ html.js input.throbbing {
   background-position: 100% -16px; /* LTR */
 }
 
+.no_label .field-label,
+.no_label label {
+  display: none;
+}
+.no_label .field {
+  padding-bottom: 0;
+}
+
 /* -------------- Other Overrides ------------- */
 
 div.password-suggestions {
