MULTISITE-100 Make fat footer work with bootswatch Theme media gallery add media form

--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -80,7 +80,8 @@ blockquote {
   margin: 15px;
 }
 .navbar-inner {
-  #gradient .vertical(#ffffff, #f1f9fe);
+  #gradient .vertical(#def, #eaf5ff);
+  //#gradient .radial(#def, #9cf);
   .nav {
     padding: 0;
     .dropdown-toggle {
