--- a/sites/all/themes/ec_default/css/less/feature-fat-footer.less
+++ b/sites/all/themes/ec_default/css/less/feature-fat-footer.less
@@ -20,6 +20,7 @@
       &:hover {
         #gradient .vertical(#0085D5, #0075c5);
         .border-radius;
+        color: #fff;
       }
     }         
     ul {
