--- a/sites/all/themes/ec_default/css/less/style.less
+++ b/sites/all/themes/ec_default/css/less/style.less
@@ -580,7 +580,7 @@ div.admin-panel .description {
 .layout-footer-wrapper {
   margin-top: 15px;
   padding: 15px;
-  color: #fff;
+  /*color: #fff;
   .box-shadow(0 1px 100px rgba(51, 102, 153, 0.8) inset);
   background-color: #7ad;
   text-shadow: -1px 0 0 rgba(0, 0, 0, 0.1), 
@@ -597,5 +597,5 @@ div.admin-panel .description {
   a:link,
   a:visited {
     color: #fff;
-  }
+  }*/
 }
