--- a/sites/all/themes/ec_default/css/less/feature-splash.less
+++ b/sites/all/themes/ec_default/css/less/feature-splash.less
@@ -1,20 +1,17 @@
 /* ---------------- Splash screen  ----------------- */
 .splash {
   //#gradient .horizontal(#369, #f1f9fe);
-  #gradient .vertical(#369, #f1f9fe);
-  #gradient .radial(#7AD, #369);
   //#gradient .vertical-three-colors(#f1f9fe, #58B, 60%, #369);
   //#gradient .directional(#369, #f1f9fe, 30deg);
-  //#gradient .striped(#369);  
+  //#gradient .striped(#369);   
   height: 100%;
+  #gradient .vertical(#369, #f1f9fe);
+  #gradient .radial(#7AD, #369);  
   > div.row-fluid {
     padding-top: 50px;
     h1 {
       color: #F5F5F5;
-      text-shadow: -1px 0 0 rgba(0, 0, 0, 0.15), 
-             1px 0 0 rgba(0, 0, 0, 0.15),
-             0 -1px 0 rgba(0, 0, 0, 0.15),
-             0 1px 0 rgba(0, 0, 0, 0.15);
+      text-shadow: -1px 0 0 rgba(0, 0, 0, 0.15);
     }
     h2#label_language {
       margin-top: 0;
