--- a/sites/all/themes/ec_default/css/less/menu.less
+++ b/sites/all/themes/ec_default/css/less/menu.less
@@ -47,17 +47,9 @@ a.btn {
 .subnav {
   width: 100%;
   height: 36px;
-  background-color: #eeeeee; /* Old browsers */
-  background-repeat: repeat-x; /* Repeat the gradient */
-  background-image: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#eeeeee)); /* Chrome,Safari4+ */
-  background-image: -webkit-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Chrome 10+,Safari 5.1+ */
-  background-image: -ms-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* IE10+ */
-  background-image: -o-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Opera 11.10+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
-  background-image: linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* W3C */
   border: 1px solid #e5e5e5;
   .border-radius;
+  #gradient .vertical(#f5f5f5, #eeeeee);
 }
 .subnav .nav {
   margin-bottom: 0;
@@ -80,9 +72,7 @@ a.btn {
   background-color: #e9e9e9;
   border-right-color: #ddd;
   border-left: 0;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
-     -moz-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
-          box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
+  .box-shadow(inset 0 3px 5px rgba(0,0,0,.05));
 }
 .subnav .nav > .active > a .caret,
 .subnav .nav > .active > a:hover .caret {
