--- a/sites/all/themes/ec_default/fancybox/jquery.fancybox.css
+++ b/sites/all/themes/ec_default/fancybox/jquery.fancybox.css
@@ -51,7 +51,8 @@
 
 .fancybox-error {
 	color: #444;
-	font: 14px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	margin: 0;
 	padding: 10px;
 }
@@ -178,7 +179,9 @@
 
 .fancybox-title {
 	visibility: hidden;
-	font: normal 13px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size:13px;
+  font-weight:normal;
 	position: relative;
 	text-shadow: none;
 	z-index: 8050;
