MULTISITE-400 Update wiki toc display

--- a/sites/all/themes/ec_default/css/less/ec_default.less
+++ b/sites/all/themes/ec_default/css/less/ec_default.less
@@ -27,5 +27,6 @@
 @import "feature-media-galleries.less"; // feature media galleries
 @import "feature-fat-footer.less"; // feature fat footer
 @import "feature-splash.less"; // feature splash screen
+@import "feature-wiki.less"; // feature wiki
 
 @import "hack-bootstrap.less"; // hack bootstrap styles
