--- a/sites/all/themes/ec_default/css/less/feature-fat-footer.less
+++ b/sites/all/themes/ec_default/css/less/feature-fat-footer.less
@@ -8,7 +8,6 @@
   }
   div.fat_footer_item {
     display: inline-block;
-    width: 12%;
     vertical-align: top;
     text-align: left;
     line-height: 23px;
@@ -16,7 +15,7 @@
     a {
       text-decoration: none;
       display: block;
-      padding: 0 8px;
+      padding: 2px 8px;
       &:hover {
         .border-radius;
         color: #fff;
@@ -24,14 +23,17 @@
       }
     }         
     ul {
-      padding: 0 0 0 10px;
+      padding: 0 0 0 5px;
       margin: 0;
-      border-left: 5px solid #EEEEEE;
+      border-left: 2px solid #396EA2;
       text-align: left;
       font-size: 1em;
       li {
         list-style: none;
         line-height: 23px;
+        a {
+          padding: 2px 4px;
+        }
       }
     }
   }
