--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -260,3 +260,69 @@ blockquote {
 .carousel-control {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+
+/* ---------------- Sidebar  ----------------- */
+/* Force responsive display when block is in sidebar */
+.region-sidebar-first,
+.region-sidebar-second {
+  .row-fluid {
+    width: 100%;
+  }
+  .row {
+    margin-left: 0;
+  }
+  .row > [class*="span"], .row-fluid > [class*="span"] {
+    float: none;
+    display: block;
+    width: auto;
+    margin: 0;
+  }
+  
+  .navbar .container {
+    width: auto;
+    padding: 0;
+  }
+  .navbar .brand {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 0 0 0 -5px;
+  }
+  .navbar .nav-collapse {
+    clear: left;
+  }
+  .navbar .nav {
+    float: none;
+    margin: 0 0 9px;
+  }
+  .navbar .nav > li {
+    float: none;
+  }
+  .navbar .nav > li > a {
+    margin-bottom: 2px;
+  }
+  .navbar .nav > .divider-vertical {
+    display: none;
+  }
+  .navbar .nav .nav-header {
+    text-shadow: none;
+  }
+  .navbar .nav > li > a, .navbar .dropdown-menu a {
+    padding: 6px 15px;
+    font-weight: bold;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+  }
+  .navbar .dropdown-menu li + li a {
+    margin-bottom: 2px;
+  }
+
+  .navbar-inner {
+    padding-left: 3px;
+    padding-right: 3px;
+    .nav > li > a {
+      border: none;
+    }
+  }
+}
+
