--- a/sites/all/themes/ec_default/css/less/style.less
+++ b/sites/all/themes/ec_default/css/less/style.less
@@ -389,7 +389,8 @@ ul.links {
 
 /* -------------- Form Elements   ------------- */
 
-fieldset {
+fieldset,
+.fieldset {
   border: 1px solid #cccccc;
   padding: 10px 13px;
   margin: 10px 0;
