--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -163,6 +163,11 @@ blockquote {
   }
 }
 
+.tabs-left .nav-tabs > li > a, 
+.tabs-right .nav-tabs > li > a {
+  max-width: 200px;
+}
+
 /* ---------------- Buttons  ----------------- */
 .btn-danger { 
   color: #fff !important;
