--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -242,6 +242,7 @@ blockquote {
   border: #ddd 1px solid;
   padding: 8px;
   text-align: center;  
+  max-width: 600px;
   a {
     color: #fff !important;
     text-decoration: none;
