--MULTISITE-512 Theme quicktabs

--- a/sites/all/themes/ec_default/css/less/ec_default.less
+++ b/sites/all/themes/ec_default/css/less/ec_default.less
@@ -18,6 +18,7 @@
 @import "search.less"; // search form and results
 @import "user.less"; // user login and profile
 @import "workbench.less"; // workbench
+@import "quicktab.less"; // quicktabs
 @import "feature-faq.less"; // feature faq
 @import "feature-news.less"; // feature news
 @import "feature-communities.less"; // feature communities
