--- a/sites/all/themes/ec_default/css/less/search.less
+++ b/sites/all/themes/ec_default/css/less/search.less
@@ -2,6 +2,7 @@
 
 #search-block-form {
   padding-bottom: 5px;
+  text-align: left;
   .content {
     margin-top: 0;
   }
@@ -9,38 +10,17 @@
     padding: 0;
   }
 }
-#search-form input#edit-keys,
-#block-search-form .form-item-search-block-form input {
-  font-size: 1em;
-  height: 1.143em;
-  margin-right: 5px;
-  width: 9em;
+
+.layout-left,
+.layout-right {
+  #search-block-form {
+    .form-submit {
+      margin-right: 0;
+      margin-top: 3px;
+    }
+  }
 }
-#search-block-form input.form-submit,
-#search-form input.form-submit {
-  margin-left: 0;
-  margin-right: 0;
-  height: 25px;
-  width: 34px;
-  padding: 0;
-  cursor: pointer;
-  text-indent: -9999px;
-  border-color: #e4e4e4 #d2d2d2 #b4b4b4;
-  background: url(../images/search-button.png) no-repeat center top;
-  overflow: hidden;
-}
-#search-block-form input.form-submit:hover,
-#search-block-form input.form-submit:focus,
-#search-form input.form-submit:hover,
-#search-form input.form-submit:focus {
-  background-position: center bottom;
-}
-#search-form .form-item-keys label {
-  display: block;
-}
-#search-block-form input.form-text {
-  width: 100px;
-}
+
 
 /* --------------- Search Results ---------------- */
 ol.search-results {
