--MULTISITE-530 Fix problem bar display

--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -331,3 +331,21 @@ blockquote {
   }
 }
 
+/* ---------------- Progress bar  ----------------- */
+.progress {
+  height: auto;
+  background-color: #fff;
+  background-image: none;
+  .box-shadow(none);
+  filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  .bar {
+    width: 100%;
+    background-color: transparent;
+    background-image: none;
+    margin: 0;
+    filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);
+    .filled {
+      height: 16px;
+    }
+  }
+}
