--MULTISITE-100 Fix display problem of carousel in sidebars

--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -265,6 +265,14 @@ blockquote {
 .carousel-control {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+.region-sidebar-first,
+.region-sidebar-second {
+  .carousel {
+    img {
+      max-height: 77px;
+    }
+  }
+}
 
 /* ---------------- Sidebar  ----------------- */
 /* Force responsive display when block is in sidebar */
