--MULTISITE-100 Update search display

--- a/sites/all/themes/ec_default/css/less/search.less
+++ b/sites/all/themes/ec_default/css/less/search.less
@@ -21,7 +21,6 @@
   }
 }
 
-
 /* --------------- Search Results ---------------- */
 ol.search-results {
   padding-left: 0;
@@ -38,4 +37,21 @@ ol.search-results {
 }
 .search-results .search-snippet-info {
   padding-left: 0;
+}
+
+/* --------------- Search Filters ---------------- */
+.apachesolr-browse-blocks {
+  .block-facetapi {
+    display: inline-block;
+    width: 50%;
+    vertical-align: top;
+  }
+}
+
+.block-current-search {
+  h3 {
+    font-size: 1em;
+    color: #3B3B3B;
+    font-weight: bold;
+  }
 }
