--- a/sites/all/themes/ec_default/css/layout.css
+++ b/sites/all/themes/ec_default/css/layout.css
@@ -169,16 +169,16 @@ body,
 }
 
 /* ------------ Default Block Menu ----------------- */
-.layout-left  ul li.block-menu ul li a {
+li.block-menu ul li a {
     padding-left: 15px;
 }
-.layout-left  ul li.block-menu ul li li a {
+li.block-menu ul li li a {
     padding-left: 20px;
 }
-.layout-left  ul li.block-menu ul li ul li ul li a {
+li.block-menu ul li ul li ul li a {
     padding-left: 25px;
 }
-.layout-left  ul li.block-menu ul li ul li ul li ul li a{
+li.block-menu ul li ul li ul li ul li a{
     padding-left: 30px;
 }
 
