--MULTISITE-662 Add blog feature

--- a/sites/all/themes/ec_default/css/less/ec_default.less
+++ b/sites/all/themes/ec_default/css/less/ec_default.less
@@ -29,5 +29,6 @@
 @import "feature-fat-footer.less"; // feature fat footer
 @import "feature-splash.less"; // feature splash screen
 @import "feature-wiki.less"; // feature wiki
+@import "feature-blog.less"; // feature blog
 
 @import "hack-bootstrap.less"; // hack bootstrap styles
