--- a/sites/all/themes/ec_default/css/less/style.less
+++ b/sites/all/themes/ec_default/css/less/style.less
@@ -5,7 +5,10 @@
 .c_right { clear: right; }
 .c_left { clear: left; }
 .t_upper { text-transform: uppercase; }
+.t_right {text-align: right; }
+.t_left {text-align: left; }
 .clickable { cursor: pointer; }
+
 
 /* ---------- Overall Specifications ---------- */
 
