--MULTISITE-674 Fix css for events

--- a/sites/all/themes/ec_default/css/less/feature-events.less
+++ b/sites/all/themes/ec_default/css/less/feature-events.less
@@ -45,6 +45,7 @@
     td.multi-day div.weekview {
       background-color: @primary_tab_bg_color; 
       border: #000 1px solid;
+      height: 3.5em !important;
       a { 
         color: @primary_tab_text_color;
         text-shadow: 1px 1px #000000;
@@ -83,4 +84,9 @@
       text-align: center;
     }
   }
+}
+
+.single-day-footer .grippie,
+.header-body-divider .grippie {
+  background-image: none;
 }
